Cambios en el titulo de checkbox

--- a/Login.html
+++ b/Login.html
@@ -38,7 +38,7 @@
             class="conditions-check"
           />
           <label class="check-label" for="conditions"
-            >Acepto los terminos y condiciones
+            >Acepto todos los terminos y condiciones
           </label>
         </section>
         <button>Iniciar Sesion</button>
