Cambio de titulo

--- a/Login.html
+++ b/Login.html
@@ -38,7 +38,7 @@
             class="conditions-check"
           />
           <label class="check-label" for="conditions"
-            >Acepto todos los terminos y condiciones del sistema
+            >Acepto y condiciones del sistema
           </label>
         </section>
         <button>Iniciar Sesion</button>
