Rediseño del login

--- a/Login.html
+++ b/Login.html
@@ -9,40 +9,32 @@
   </head>
   <body>
     <div class="container">
-      <h1>Ingrese al sistema</h1>
+      <i class="fa-solid fa-user"></i>
       <form action="" method="post">
         <div class="fields">
-          <label class="main-label" for="user">Usuario</label>
           <input
             type="text"
             id="user"
             name="user"
-            placeholder="Ingrese su usuario"
+            placeholder="Nombre de usuario"
             required
           />
-          <label class="main-label" for="pass">Contraseña</label>
+
           <input
             type="password"
             id="pass"
             name="pass"
-            placeholder="Ingrese su contraseña"
+            placeholder="Contraseña"
             required
           />
         </div>
 
-        <section class="container-check">
-          <input
-            type="checkbox"
-            name="conditions"
-            id="conditions"
-            class="conditions-check"
-          />
-          <label class="check-label" for="conditions"
-            >Aceptar términos y condiciones
-          </label>
-        </section>
         <button>Iniciar Sesion</button>
       </form>
     </div>
   </body>
+  <script
+    src="https://kit.fontawesome.com/965a53a721.js"
+    crossorigin="anonymous"
+  ></script>
 </html>
